--- a/lib/updtr_web/templates/user/new.html.eex
+++ b/lib/updtr_web/templates/user/new.html.eex
@@ -1,5 +1,5 @@
-<div class="ui center aligned grid">
-  <div class="ui container">
+<div class="ui two column doubling centered grid">
+  <div class="column">
     <h2 class="ui huge header">
         Sign up
     </h2>
@@ -13,12 +13,12 @@
 			<div class="ui large form">
 				<%= input f, :email, placeholder: "Email", required: true, prepend_icon: "envelope" %>
 				<%= input f, :password, placeholder: "Password", required: true, minlength: 10, prepend_icon: "lock" %>
-				<%= submit "Create account", class: "ui blue submit button" %>
+				<%= submit "Create account", class: "ui fluid large submit primary button" %>
 			</div>
-			<% end %>
-			<div class="ui bottom attached warning message">
-				<i class="icon help"></i>
-				Already signed up? <%= link "Login here", to: Routes.auth_path(@conn, :new) %> instead.
-			</div>
+		<% end %>
+		<div class="ui bottom attached warning message">
+			<i class="icon help"></i>
+			Already signed up? <%= link "Login here", to: Routes.auth_path(@conn, :new) %> instead.
+		</div>
 	</div>
 </div>
