--- a/lib/updtr_web/templates/reset_password/edit.html.eex
+++ b/lib/updtr_web/templates/reset_password/edit.html.eex
@@ -1,47 +1,23 @@
-<div class="row justify-content-center mt-5">
-  <div class="col-md-4 mt-5">
-    <div class="card">
-      <div class="card-header">
-        New password
-      </div>
-      <div class="card-body login-card-body">
-        <p class="login-box-msg">Please pick a new <strong>strong</strong> password</p>
-        <%= form_for @changeset, Routes.reset_password_path(@conn, :update), [class: "needs-validation"], fn f -> %>
-        <div class="input-group mb-3">
-          <%= inputs_for f, :user, fn u -> %>
-            <%= input u, :password, placeholder: "Password", required: true, minlength: 10, maxlength: 32 %>
-            <div class="input-group-append">
-              <div class="input-group-text">
-                <span class="fas fa-envelope"></span>
-              </div>
-            </div>
-          <% end %>
-        </div>
+<div class="ui two column doubling centered grid">
+  <div class="column">
+		<div class="ui huge header">
+			Reset password
+		</div>
+		<div class="ui attached message">
+			Please pick a new <strong>strong</strong> password
+		</div>
+		<%= form_for @changeset, Routes.reset_password_path(@conn, :update), [class: "ui form attached fluid segment"], fn f -> %>
+			<%= inputs_for f, :user, fn u -> %>
+				<%= input u, :password, placeholder: "Password", required: true, minlength: 10, maxlength: 32 %>
+			<% end %>
+      <%= input f, :password_confirm, placeholder: "Confirm password", required: true, minlength: 10, maxlength: 32 %>
+      <%= input f, :password_reset_token, value: @password_reset.password_reset_token, hidden: true %>
+      <%= submit "Change password", class: "ui fluid large primary button" %>
+    <% end %>
 
-        <div class="input-group mb-3">
-          <%= input f, :password_confirm, placeholder: "Confirm password", required: true, minlength: 10, maxlength: 32 %>
-          <div class="input-group-append">
-            <div class="input-group-text">
-              <span class="fas fa-envelope"></span>
-            </div>
-          </div>
-        </div>
-
-        <%= input f, :password_reset_token, value: @password_reset.password_reset_token, hidden: true %>
-
-
-
-        <div class="row">
-          <div class="col-12">
-            <%= submit "Change password", class: "btn btn-primary btn-block" %>
-          </div>
-
-        </div>
-        <% end %>
-        <p class="mt-3 mb-1">
-          <%= link "Login", to: Routes.auth_path(@conn, :new) %>
-        </p>
-      </div>
-    </div>
-  </div>
+		<div class="ui bottom attached warning message">
+			<i class="icon info"></i>
+			<%= link "Login", to: Routes.user_path(@conn, :new) %> or <%= link "I forgot my password", to: Routes.reset_password_path(@conn, :new) %>
+		</div>
+	</div>
 </div>
