--- a/lib/updtr_web/templates/layout/_footer.html.eex
+++ b/lib/updtr_web/templates/layout/_footer.html.eex
@@ -1,4 +1,4 @@
-<footer>
+<footer class="ui inverted">
    <div class="ui container">
   		<p>Copyright © 2019 Updtr.io. All rights reserved.</p>
 	</div>
