--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -8,7 +8,7 @@ html {
 }
 
 body {
-  font-family: "Lato", sans-serif;  
+  font-family: "Lato", sans-serif;
   background-color: #DADADA;
 }
 
@@ -17,10 +17,16 @@ footer {
   bottom: 0;
   width: 100%;
   padding-top: 20px;
-  padding-bottom: 20px;  
-  background-color: #f5f5f5;  
+  padding-bottom: 20px;
+  background-color: #f5f5f5;
+
   p {
     text-align: center;
     color: hsl(0, 0%, 45%);
   }
+}
+
+.main-container {
+  margin-top: 7em;
+  margin-bottom: 7em
 }
