add liveview to project

--- a/lib/updtr_web/templates/mark/index.html.eex
+++ b/lib/updtr_web/templates/mark/index.html.eex
@@ -18,6 +18,8 @@
 		<% end %>
 	</div>
 
+	<%= live_render(@conn, UpdtrWeb.ClockDemo) %>
+
   <div class="row">
      <div class="ui cards centered">
 				<%= for mark <- @bookmarks do %>
