fix first part for integrating liveview into marks page

--- a/lib/updtr_web/templates/layout/app.html.eex
+++ b/lib/updtr_web/templates/layout/app.html.eex
@@ -1,29 +1,2 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta http-equiv="x-ua-compatible" content="ie=edge">
-
-  <link rel="stylesheet" href="<%= Routes.static_path(@conn, "/js/app.css") %>" />
-  <title>Updtr</title>
-
-  <link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css"
-    integrity="sha256-+N4/V/SbAFiW1MPBCXnfnP9QSN3+Keu+NlB+0ev/YKQ=" crossorigin="anonymous" />
-
-  <%= csrf_meta_tag() %>
-  <script type="text/javascript" src="<%= Routes.static_path(@conn, "/js/app.js") %>"></script>
-</head>
-
-
-<body id="root">
-  <%= render "_navigation.html", assigns %>
-  <div class="ui main container main-container" style="">
-    <%= render "_main-content.html", assigns %>
-  </div>
-  <%= render "_footer.html", assigns %>
-</body>
-
-</html>
+<%= render "_flash.html", assigns %>
+<%= render @view_module, @view_template, assigns %>
