--- a/lib/updtr_web/templates/layout/root.html.eex
+++ b/lib/updtr_web/templates/layout/root.html.eex
@@ -20,7 +20,7 @@
 
 <body id="root">
   <%= render "_navigation.html", assigns %>
-  <div class="ui main container main-container" style="">
+  <div class="ui main container">
   	<%= @inner_content %>
   </div>
   <%= render "_footer.html", assigns %>
