--- a/lib/updtr_web/templates/mark/index.html.leex
+++ b/lib/updtr_web/templates/mark/index.html.leex
@@ -1,53 +1,56 @@
 <div class="ui grid">
-	<div class="ui segment centered divided column eight wide computer thirteen wide tablet">
-		<form class="ui fluid icon input large" phx-submit="search">
-		  <%= text_input :search_field, :query, placeholder: "Press '/' to search", "phx-debounce": "300", class: "prompt" %>
-			<i class="inverted circular search link icon"></i>
-		</form>
-		<div class="ui horizontal divider">
-			Or
-		</div>
-		<%= form_for @changeset, "#", [phx_submit: :create], fn f -> %>
-			<div class="ui form fluid right labeled input">
-				<%= text_input f, :url, type: :url, required: true, placeholder: "https://www.example.com" %>
-				<%= submit class: "ui blue label icon button" do %>
-					<i class="add icon"></i>
-				<% end %>
+  <div class="row">
+		<div class="ui segment centered divided column eight wide computer thirteen wide tablet">
+			<form class="ui fluid icon input large" phx-submit="search">
+				<%= text_input :search_field, :query, placeholder: "Press '/' to search", "phx-debounce": "300", class: "prompt" %>
+				<i class="inverted circular search link icon"></i>
+			</form>
+			<div class="ui horizontal divider">
+				Or
 			</div>
-			<%= error_tag f, :url %>
-		<% end %>
+			<%= form_for @changeset, "#", [phx_submit: :create], fn f -> %>
+				<div class="ui form fluid right labeled input">
+					<%= text_input f, :url, type: :url, required: true, placeholder: "https://www.example.com" %>
+					<%= submit class: "ui blue label icon button" do %>
+						<i class="add icon"></i>
+					<% end %>
+				</div>
+				<%= error_tag f, :url %>
+			<% end %>
+		</div>
 	</div>
 
 
-  <div class="row">
-     <div class="ui two stackable cards centered">
-				<%= for mark <- @bookmarks do %>
-					<div class="ui <%= random_color %> card">
-						<div class="content">
-							<i class="right floated trash red icon"></i>
-							<div class="header">
-								<%= mark.title %>
-								<i class="external small icon"></i>
-							</div>
-							<div class="meta">
-								<span class="floated time">Created <%= Timex.from_now(mark.inserted_at) %></span>
-							</div>
-							<div class="description">
-								<%= mark.description %>
-							</div>
-
+	<div class="row">
+		<div class="ui two stackable cards">
+			<%= for mark <- @bookmarks do %>
+				<div class="ui card raised">
+					<div class="content">
+						<i class="right floated trash red icon"></i>
+						<i class="right floated star icon"></i>
+						<a class="header" href="<%= mark.url %>">
+							<%= mark.title %>
+							<i class="external small icon"></i>
+						</a>
+						<div class="meta">
+							<span class="floated time">Created <%= Timex.from_now(mark.inserted_at) %></span>
+						</div>
+						<div class="description">
+							<%= mark.description %>
 						</div>
 
-						<div class="extra content">
-							<i class="globe icon"></i>
-							<a href="<%= mark.url %>"><%= mark.url %></a>
-							<div class="ui bottom attached button">
-								<i class="edit icon"></i>
-								Edit Bookmark
-							</div>
+					</div>
+
+					<div class="extra content">
+						<i class="globe icon"></i>
+						<a href="<%= mark.url %>"><%= base_url(mark.url) %></a>
+						<div class="right floated">
+						 <i class="calendar outline alternate icon"></i>
+						 <%= show_date(mark.inserted_at) %>
 						</div>
 					</div>
-				<% end %>
+				</div>
+			<% end %>
 		</div>
 	</div>
 </div>
